leptos_macro/tests/compiler_assumptions/05_presence_tracking_independent_of_error_type.stderr
error[E0277]: wrong type: `bool` is not of type 'i32'
  --> tests/compiler_assumptions/05_presence_tracking_independent_of_error_type.rs:44:6
   |
44 |     <_ as IsI32>::check(&val);
   |      ^ the trait `IsI32` is not implemented for `bool`
   |
help: the trait `IsI32` is implemented for `i32`
  --> tests/compiler_assumptions/05_presence_tracking_independent_of_error_type.rs:25:1
   |
25 | impl IsI32 for i32 {}
   | ^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `pass` found for type `bool` in the current scope
  --> tests/compiler_assumptions/05_presence_tracking_independent_of_error_type.rs:49:19
   |
49 |     let val = val.pass();
   |                   ^^^^ method not found in `bool`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `IsI32` defines an item `pass`, perhaps you need to implement it
  --> tests/compiler_assumptions/05_presence_tracking_independent_of_error_type.rs:15:1
   |
15 | trait IsI32 {
   | ^^^^^^^^^^^

error[E0277]: some required props are missing
  --> tests/compiler_assumptions/05_presence_tracking_independent_of_error_type.rs:53:21
   |
53 |     require_props::<((String,), ())>();
   |                     ^^^^^^^^^^^^^^^ the trait `RequireProps` is not implemented for `((String,), ())`
   |
note: required by a bound in `require_props`
  --> tests/compiler_assumptions/05_presence_tracking_independent_of_error_type.rs:35:21
   |
35 | fn require_props<S: RequireProps>() {}
   |                     ^^^^^^^^^^^^ required by this bound in `require_props`
